Fix overflowing issue on too long book titles / authors names

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    overflow: hidden;
 }
 
 .card.read {
@@ -106,12 +107,7 @@ form {
     flex: 1;
 }
 
-.card .bottom {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.card .bottom button.readButton {
+.card button.readButton {
     background-color: transparent;
     border: none;
     font-size: 16px;
@@ -121,21 +117,21 @@ form {
     font-weight: bold;
 }
 
-.card:hover .bottom button.readButton:hover {
+.card:hover button.readButton:hover {
     background-color: var(--main-darker-color);
     color: white;
     cursor: pointer;
 }
 
-.card:hover .bottom button.readButton:after {
+.card:hover button.readButton:after {
     content: 'Mark as read';
 }
 
-.card.read:hover .bottom button.readButton:after {
+.card.read:hover button.readButton:after {
     content: 'Not read';
 }
 
-.card:hover .bottom button.readButton {
+.card:hover button.readButton {
     color: black;
     background-color: transparent;
     border: 2px solid var(--main-pop-color);
@@ -155,6 +151,7 @@ form {
 
 .book-title {
     width: 90%;
+    max-height: 60px;
     overflow: hidden;
     font-weight: bold;
     font-size: 1.5rem;
@@ -232,4 +229,10 @@ button.confirm:hover {
 .material-symbols-outlined.close:hover {
     cursor: pointer;
     color: var(--main-pop-color)
+}
+
+.readButton {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
 }
